tests/e2e/service-gateway/03-assert.yaml
# The Ingress branch's child, same name, different kind.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-tunnel-pizza
  ownerReferences:
    - apiVersion: v1
      kind: Service
      name: nginx
      controller: true
spec:
  ingressClassName: tunnel.pizza
  defaultBackend:
    service:
      name: nginx
      port:
        number: 80
